Fix ReditItem style all overflow should be hidden

--- a/src/pages/main/rss/reditItem/ReditItem.module.css
+++ b/src/pages/main/rss/reditItem/ReditItem.module.css
@@ -12,7 +12,7 @@
   border-bottom: 1px rgba(50,50,50,1);
   background-color: rgb(200,200,200);
   border-radius: 4px;
-  overflow-x: hidden;
+  overflow: hidden;
 }
 
 .img {
